# LLaVA-VQA

./: .gitignore  .gitmodules  .pylintrc  Makefile  README.md  pyproject.toml  setup.cfg
data_visualization/: vqa_interface.py  vqa_visualization.ipynb
eval/: vqav2.sh
notebooks/: llava_vizwiz_eval.ipynb  llava_vizwiz_train.ipynb  llava_vqa_eval.ipynb  vizwiz_visualization.ipynb
src/data_visualization/: vizwiz_interface.py  vizwiz_visualization.ipynb  vqa_interface.py
src/eval/: eval_vqa_v2.py  eval_vqa_v2.sh  llava_vqa_eval.ipynb
src/eval/vizwiz/: eval_local_vizwiz.sh  eval_vizwiz.py  eval_vizwiz.sh  vizwiz_submission.py
src/eval/vqa/: eval_vqa_v2.py  eval_vqa_v2.sh
src/train/: finetune_vizwiz_lora.sh  format_vizwiz_data.py  train.py
