[metadata]
name = LLaVA-VQA
version = 0.0.1
description = Code for training and evaluating LLaVA on VQA

[options]
packages = find:
python_requires = >=3.10
install_requires =
    accelerate == 0.21.0
    black
    black[jupyter]
    bitsandbytes
    einops == 0.6.1
    einops-exts == 0.0.4
    fastapi
    gradio==4.16.0
    gradio_client==0.8.1
    httpx==0.24.0
    isort
    markdown2[all]
    mypy
    numpy
    peft
    pydantic
    pylint
    requests
    torch == 2.1.2
    torchvision == 0.16.2
    transformers == 4.37.2
    tokenizers == 0.15.1
    scikit-learn==1.2.2
    sentencepiece == 0.1.99
    shortuuid
    timm==0.6.13
    uvicorn
    

[options.extras_require]
train =
    deepspeed == 0.12.6
    ninja
    wandb